fix layout with scrollbar

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,4 +1,9 @@
 .navbar {
   height: 4rem;
+  width: calc(100% - 1rem);
   background-color: var(--primary-80);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 }
